# eclipsera

./: .gitignore  .pre-commit-config.yaml  CLI_USAGE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
docs/api/: automl.rst  cluster.rst  core.rst  decomposition.rst  explainability.rst  feature_selection.rst  manifold.rst  ml.rst  model_selection.rst  pipeline.rst  preprocessing.rst
docs/tutorials/: automl.rst  classification.rst  clustering.rst  explainability.rst  pipelines.rst  regression.rst
eclipsera/: __init__.py  __version__.py
eclipsera/automl/: __init__.py  _auto_classifier.py  _auto_regressor.py
eclipsera/cli/: __init__.py  main.py
eclipsera/cluster/: __init__.py  _dbscan.py  _gaussian_mixture.py  _hierarchical.py  _kmeans.py  _mean_shift.py  _spectral.py
eclipsera/core/: __init__.py  base.py  exceptions.py  metrics.py  utils.py  validation.py
eclipsera/decomposition/: __init__.py  _nmf.py  _pca.py  _truncated_svd.py
eclipsera/explainability/: __init__.py  _feature_importance.py  _partial_dependence.py  _permutation_importance.py
eclipsera/feature_selection/: __init__.py  _rfe.py  _univariate.py  _variance.py
eclipsera/manifold/: __init__.py  _isomap.py  _lle.py  _tsne.py
eclipsera/ml/: __init__.py  ensemble.py  linear.py  naive_bayes.py  neighbors.py  neural_network.py  svm.py  tree.py
eclipsera/model_selection/: __init__.py  _search.py  _split.py
eclipsera/pipeline/: __init__.py  _pipeline.py
eclipsera/preprocessing/: __init__.py  encoders.py  imputation.py  scaling.py
milestone/: ROADMAP_2.0.0.md
tests/: conftest.py  test_automl.py  test_cli.py  test_cluster_dbscan.py  test_cluster_hierarchical.py  test_cluster_kmeans.py  test_cluster_mean_shift.py  test_cluster_spectral.py  test_core_base.py  test_core_metrics.py  test_core_utils.py  test_core_validation.py  test_decomposition.py  test_decomposition_nmf.py  test_explainability.py  test_fastalloc_working.py  test_feature_selection.py  test_feature_selection_rfe.py  test_init.py  test_manifold_tsne.py  test_ml_ensemble.py  test_ml_linear.py  test_ml_naive_bayes.py  test_ml_neighbors.py  test_ml_neural_network.py  test_ml_svm.py  test_ml_tree.py  test_model_selection_search.py  test_model_selection_split.py  test_pipeline.py  test_preprocessing_encoders.py  test_preprocessing_imputation.py  test_preprocessing_scaling.py
versions/: v1.2.0.md
